# pipeline-dados

./: .gitignore  Makefile  README.md  pyproject.toml
configs/: dev.json
data/raw/: customers.csv  order_items.csv  orders.csv
jobs/: bronze_ingest.py  gold_aggregate.py  silver_refine.py
scripts/: spark.sh
src/pipe2/: __init__.py  config.py  io.py  quality.py  schemas.py  session.py  transformations.py
src/pipe2.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
