[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pipe2"
version = "0.1.0"
description = "Spark Data Pipeline (Bronze/Silver/Gold)"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "pyspark>=3.5,<3.6",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

